# sailfish_client_pc

./: .gitignore  CMakeLists.txt  README.md  env.cmake  main.cpp  resources.qrc
resources/qss/: lightblue.css
src/: AppMessage.cpp  AppMessage.h  CMakeLists.txt  Context.cpp  Context.h  Settings.cpp  Settings.h
src/sdk/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  ClipboardManager.cpp  ClipboardManager.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  MessageMaker.cpp  MessageMaker.h  MessageParser.cpp  MessageParser.h  RawImage.cpp  RawImage.h  SailfishSDK.cpp  SailfishSDK.h  Statistics.cpp  Statistics.h  StreamConfig.h  StreamDBManager.cpp  StreamDBManager.h  StreamItem.cpp  StreamItem.h  WSClient.cpp  WSClient.h
src/settings/: CMakeLists.txt  Settings.cpp  Settings.h
src/test/: CMakeLists.txt  test_hello.cpp
src/ui/: AboutContent.cpp  AboutContent.h  AppColorTheme.cpp  AppContent.cpp  AppContent.h  AppMenu.cpp  AppMenu.h  AppStreamList.cpp  AppStreamList.h  Application.cpp  Application.h  CMakeLists.txt  CreateStreamDialog.cpp  CreateStreamDialog.h  Director.cpp  Director.h  FloatButton.cpp  FloatButton.h  FloatMenu.cpp  FloatMenu.h  MessageDialog.cpp  MultiDisplayModeWidget.cpp  MultiDisplayModeWidget.h  OpenGLImageReader.cpp  OpenGLImageReader.h  OpenGLVideoWidget.cpp  OpenGLVideoWidget.h  OpenGLVideoWidgetShader.h  QtKeyConverter.cpp  QtKeyConverter.h  Renderer.cpp  Renderer.h  SDLVideoWidget.cpp  SDLVideoWidget.h  SettingsContent.cpp  SettingsContent.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  (+12 more)
src/ui/debug/: DebugWidget.cpp  DebugWidget.h  LineChart.cpp  LineChart.h
src/ui/widgets/: SwitchButton.cpp  SwitchButton.h
